# import-holmes

./: .editorconfig  .eslintrc.json  .gitattributes  .prettierrc  Cargo.toml  LICENSE  build-rs-cli.sh  import-holmes-0.1.0.tgz  install.sh  package.json  pnpm-lock.yaml  readme.md  schema.json  tsconfig.json  types.d.ts
.github/: demo.tape
.github/workflows/: ci-cd.yml  publish.yml  pull-check.yml
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/inspect_cli/: Cargo.toml  package.json  readme.md
crates/inspect_cli/example/src/: cleiton.tsx
crates/inspect_cli/src/: log.rs  main.rs  read_module.rs  table.rs
crates/inspect_cli/tmp/src/: cleiton.ts
crates/inspect_core/: Cargo.toml
crates/inspect_core/src/: lib.rs  parser.rs  visitor.rs
crates/inspect_kotlin/: Cargo.toml
crates/inspect_kotlin/src/: lib.rs  parser.rs  visitor.rs
crates/inspect_module/: Cargo.toml  test.ts
crates/inspect_module/src/: inspect.rs  main.rs  parser.rs  visitor.rs
crates/inspect_typescript/: Cargo.toml
crates/inspect_typescript/src/: lib.rs  parser.rs  read_project.rs  visitor.rs
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
example/: .holmesrc.json  package.json
example/kotlin/: App.kt  Main.kt
example/new/: cleiton copy 2.tsx  cleiton.tsx  package.json
example/src/: another-file.tsx  test.js
src/: cli.ts  config.rs  csv.rs  index.ts  json.rs  log.rs  main.rs  read_module.rs  read_project.rs  table.rs  types.ts
src/commands/: default.ts  inspect.ts
src/core/: filters.ts  helpers.ts  index.ts  inspect-error.ts  inspect-errors.spec.ts  inspect-module.ts
src/helpers/: count-import-specifier-visitor.ts  generate-filters.ts  get-import-declaration-nodes.spec.ts  get-import-declaration-nodes.ts  implement-references.spec.ts  implement-references.ts  parse-options.spec.ts  parse-options.ts  with-occurrences.spec.ts  with-occurrences.ts
src/parser/: helpers.ts  index.ts
src/scaffold/: inspect.mock.ts  swc.mock.ts  swc.ts
